Fixed invisible player div before player loads

--- a/src/styles/SearchPage.css
+++ b/src/styles/SearchPage.css
@@ -205,15 +205,28 @@
     z-index: 1000;
 }
 
-.player-flutuante .btn {
-    color: white;
+.closeButton {
     position: absolute;
     top: 0px;
     right: 0px;
-    font-size: 20px;
-    z-index: 1020;
-    padding-top: 0px;
-    padding-right: 4px;
+    color: #f5f5f5;
+    background-color: rgb(255, 255, 255, 0.2)
+}
+
+.closeButton:hover {
+    background-color: rgb(255, 255, 255, 0.4)
+}
+
+.moveButton {
+    position: absolute;
+    top: 0px;
+    right: 25px;
+    color: #f5f5f5;
+    background-color: rgb(255, 255, 255, 0.2)
+}
+
+.moveButton:hover {
+    background-color: rgb(255, 255, 255, 0.4)
 }
 
 .player-flutuante iframe {
